# pancake-player

./: .gitignore  CHANGELOG_SESSION.md  DOCUMENTATION.md  LICENSE  README.md  diff_output.txt  discord-bridge.cjs  implementation_plan.md  index.html  package-lock.json  package.json
.github/workflows/: build-mac.yml  build.yml
src/: App.tsx  App.tsx.backup  audioEngine.ts  constants.ts  index.css  main.tsx  types.ts  utils.ts
src-tauri/: 2  Cargo.toml  build_log.txt  build_log_2.txt  permissions.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  media_player.rs  playlist.rs
src/components/: ContextMenu.tsx  DragDropOverlay.tsx  FavouritesView.tsx  FileInfoModal.tsx  Home.tsx  IconButton.tsx  LegalView.tsx  MetadataEditorModal.tsx  PlayerBar.tsx  PlaylistCard.tsx  PlaylistDetailView.tsx  QueueView.tsx  SavePlaylistModal.tsx  SettingsModal.tsx  TagContextMenu.tsx  TitleBar.tsx  TopBar.tsx  VisualizerView.tsx
src/contexts/: SettingsContext.tsx
src/hooks/: useAudioPlayer.ts  useGlobalShortcuts.ts  useKeyboardShortcuts.ts  useQueue.ts
src/visualizers/: EclipseRenderer.ts  IVisualizerRenderer.ts  MirrorRenderer.ts  ShatterRenderer.ts  StandardRenderer.ts  SurroundRenderer.ts
